2019-02-10  Karl Berry  <karl@tug.org>

	* Makefile.am (LDADD) [cross]: icu-native/lib/icudt.a per Luigi.

2019-01-08  Karl Berry  <karl@freefriends.org>

	* Import icu-63.1.

2018-01-12  Karl Berry  <karl@freefriends.org>

	* Import icu-60, now requiring C++11; reautoconf.

2017-04-27  Karl Berry  <karl@tug.org>

	* Makefile.am (LDADD): link icutest with ICU_LIBS_EXTRA.

2017-03-13  Karl Berry  <karl@freefriends.org>

	* Import icu-58.2 (release); reautoconf.
	* version.ac: update.

2016-03-27  Karl Berry  <karl@tug.org>

	* Import icu-57.1 (release).

2016-02-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Makefile.am, configure.ac: New convention.

2015-10-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update icu-56.1 (release).

2015-09-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import icu-56.1 (56_rc).
	* version.ac: Adjusted.

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update icu-55.1 (release).

2015-03-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import icu-55.1 (55_rc).
	* version.ac: Adjust.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-10-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update icu-54.1 (release).

2014-09-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import icu-54.1 (54_rc).
	* version.ac: Adjust.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2014-04-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update icu-53.1 (release).

2014-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Avoid using '--disable-strict' for Solaris.

2014-03-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import icu-53.1 (53_rc).
	* version.ac: Adjust.

2013-10-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* icutest.c: Print more info.

2013-10-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update icu-52.1 (release).

2013-09-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import icu-52.1 (52_rc2).