@@ -1,3 +1,9 @@
+2019-02-14  Johannes Hielscher  <jhielscher@posteo.de>
+
+	* Makefile.am (nodist_libpng_a_SOURCES) [PNG_ARM_NEON]: include
+	@LIBPNG_TREE@/arm/palette_neon_intrinsics.c.
+	tlbuild 12 Feb 2019 00:07:11.
+
 2018-12-02 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	Import libpng-1.6.36.
