@@ -1,3 +1,7 @@
+2019-02-15  Akira Kakuto  <kakuto@w32tex.org>
+
+	* ptexenc.c: Initialize a local variable.
+
 2019-02-11  Karl Berry  <karl@tug.org>
 
 	* version.ac: no /dev for TL'19.
